Added Devise and changed name to Verinterst

--- a/app/assets/stylesheets/bootstrap_and_custimisation.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_custimisation.css.scss
@@ -4,8 +4,8 @@ $body-bg:                                                   #ecf0f1;
 $font-family-sans-serif:                'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $navbar-height:                                        45px;
 $navbar-default-bg:                          white;
-$navbar-default-brand-color:      #01DFA5;
-$brand-primary:                                    #01DFA5;
+$navbar-default-brand-color:      #cc2127;
+$brand-primary:                                    #cc2127;
 $jumbotron-bg:                                         white;
 
 @import 'bootstrap';
