--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,14 +8,18 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" <%= link_to "Everpresent", root_path %></a>
+      <a class="navbar-brand" <%= link_to "Verinterest", root_path %></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "Home", root_path %></li>
-            <li><%= link_to "About", about_path %></li> 
+            <li><%= link_to "About", about_path %></li>
+        
+        <% if user_signed_in? %>
+        <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+        <% end %>
           </ul>
         <ul class="nav navbar-nav navbar-right">
      </div><!-- /.navbar-collapse -->
