--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,6 +22,7 @@
               <span class="glyphicon glyphicon-plus"></span> New Pin
             <% end %>
           </li>
+        <li><%= link_to "Account", edit_user_registration_path %></li>
         <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
         <% end %>
           </ul>
